# boost-vcpkg-github-action-sample

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: hosted-ninja-vcpkg_submod.yml
src/: main.cpp  test.cpp
windows/: vcpkg.json
